FEAT: change logger and openapi gen
