# internal/api/hello_world.go
@@ -4,7 +4,6 @@ import (
 	"context"
 	"net/http"
 
-	v1 "gitlab.com/beabys/go-http-template/internal/api/v1"
 	hwproto "gitlab.com/beabys/go-http-template/proto/gen/go/hello_world/v1"
 )
 
@@ -13,21 +12,17 @@ import (
 // from openapi
 
 // HelloWorld implements the method Hello World
-func (hs *HttpServer) HelloWorld(w http.ResponseWriter, r *http.Request) *v1.Response {
-	response := v1.CommonResponse{}
+func (hs *HttpServer) HelloWorld(w http.ResponseWriter, r *http.Request) {
 	hello, err := hs.HelloWorldSvc.GetHelloWorld(r.Context())
 	if err != nil {
-		hs.Logger.Error(err)
-		response.Data = map[string]interface{}{
-			"error": err.Error(),
-		}
-		return v1.HelloWorldJSON5xxResponse(response)
+		hs.Logger.Error("error from HelloWorldSvc", err)
+		errorResponseJSON(w, http.StatusInternalServerError, err)
+		return
 	}
-	response.Success = true
-	response.Data = map[string]interface{}{
+	response := map[string]interface{}{
 		"hello": hello.Hello,
 	}
-	return v1.HelloWorldJSON200Response(response)
+	successResponseJSON(w, response)
 }
 
 // from grpc
@@ -36,7 +31,7 @@ func (hs *HttpServer) HelloWorld(w http.ResponseWriter, r *http.Request) *v1.Res
 func (hg *GRPCServer) GetHelloWorld(ctx context.Context, _ *hwproto.HelloWorldRequest) (*hwproto.HelloWorldResponse, error) {
 	hello, err := hg.HelloWorldSvc.GetHelloWorld(ctx)
 	if err != nil {
-		hg.Logger.Error(err)
+		hg.Logger.Error("error from HelloWorldSvc", err)
 		return nil, err
 	}
 	return &hwproto.HelloWorldResponse{
