# internal/api/responses.go
@@ -2,32 +2,37 @@ package api
 
 import (
 	"encoding/json"
+	"errors"
 	"fmt"
 	"net/http"
 
 	v1 "gitlab.com/beabys/go-http-template/internal/api/v1"
 )
 
-// SuccessResponseJSON return a response with status code
-func SuccessResponseJSON(w http.ResponseWriter, data map[string]interface{}) {
-	ResponseJSON(w, true, http.StatusOK, data)
+func errorResponse(err error) v1.Error {
+	errResponse := v1.Error{}
+	errMsg := err.Error()
+	errResponse.Data.Msg = &errMsg
+	return errResponse
 }
 
-// ErrorResponseJSON return an error response with status code
-func ErrorResponseJSON(w http.ResponseWriter, statusCode int, err error) {
-	data := map[string]interface{}{
-		"error": err.Error(),
-	}
-	ResponseJSON(w, false, http.StatusOK, data)
+// errorResponseJSON return an error response with status code
+func errorResponseJSON(w http.ResponseWriter, statusCode int, err error) {
+	responseWriter(w, statusCode, errorResponse(err))
 }
 
-// ResponseJSON return a response with status code
-func ResponseJSON(w http.ResponseWriter, success bool, statusCode int, data map[string]interface{}) {
-	var response = v1.CommonResponse{
-		Success: success,
-		Data:    data,
-	}
-	responseWriter(w, statusCode, &response)
+// middlewareRespHandler return an error response with status code for middlewares
+func middlewareRespHandler(w http.ResponseWriter, msg string, statusCode int) {
+	errFormatted := errorResponse(errors.New(msg))
+	responseWriter(w, statusCode, errFormatted)
+}
+
+// successResponseJSON return an error response with status code
+func successResponseJSON(w http.ResponseWriter, data map[string]interface{}) {
+	successResponse := v1.Success{}
+	successResponse.Success = true
+	successResponse.Data = data
+	responseWriter(w, http.StatusOK, successResponse)
 }
 
 // responseWriter print responseWritter
@@ -37,7 +42,7 @@ func responseWriter(w http.ResponseWriter, statusCode int, response any) {
 	responseData, err := json.Marshal(response)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		fmt.Fprintf(w, "Something went wrong :(")
+		responseData = []byte("Something went wrong :(")
 	}
-	fmt.Fprintf(w, string(responseData))
+	fmt.Fprintln(w, string(responseData))
 }
